--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
+    "redux": "^4.1.2",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.2"
   },
