--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -16,7 +16,7 @@ jobs:
         node-version: [14.16.0]
     steps:
       - name: Checkout repository
-        uses: action/checkout@v2
+        uses: actions/checkout@v2
       
       - name: Set up Node.js ${{matrix.node-version}}
         uses: actions/setup-node@v1
