--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "sweetalert": "^2.1.2",
+    "uuid-validate": "^0.0.3",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
