--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -34,7 +34,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: build docker
-        run: docker build -t agusdwimilniadi/profcourse/1.0.0 .
+        run: docker build -t agusdwimilniadi/profcourse .
       - name: login registry docker hub
         uses: docker/login-action@v1
         with:
