--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -34,14 +34,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: build docker
-        run: docker build -t agusdwimilniadi/profcourse .
+        run: docker build -t agusdwimilniadi/profcourse:1.0.0 .
       - name: login registry docker hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
       - name: push docker hub
-        run: docker push agusdwimilniadi/profcourse/1.0.0
+        run: docker push agusdwimilniadi/profcourse:1.0.0
   deployment-ec2:
     name: "Deploy to ec2 from registry docker hub"
     runs-on: ubuntu-20.04
