--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -65,4 +65,4 @@ jobs:
             StrictHostKeyChecking=no
           END
       - name: Connect EC2 & Remove All Container & Pull from Registry & Start
-        run: ssh development 'docker rm -f prof_course_client && docker pull agusdwimilniadi/profcourse/1.0.0 && docker run -d -p 3000:3000 --name=prof_course_client agusdwimilniadi/profcourse/1.0.0'
+        run: ssh development 'docker rm -f prof_course_client && docker pull agusdwimilniadi/profcourse:1.0.0 && docker run -d -p 3000:3000 --name=prof_course_client agusdwimilniadi/profcourse:1.0.0'
