--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - 'development'
       - '13-CI/CD'
+      - '14-LMS'
   # pull_request:
   #   branches:
   #     - development
@@ -34,14 +35,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: build docker
-        run: docker build -t agusdwimilniadi/profcourse:1.0.0 .
+        run: docker build -t agusdwimilniadi/profcourse .
       - name: login registry docker hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
       - name: push docker hub
-        run: docker push agusdwimilniadi/profcourse:1.0.0
+        run: docker push agusdwimilniadi/profcourse
   deployment-ec2:
     name: "Deploy to ec2 from registry docker hub"
     runs-on: ubuntu-20.04
@@ -65,4 +66,4 @@ jobs:
             StrictHostKeyChecking=no
           END
       - name: Connect EC2 & Remove All Container & Pull from Registry & Start
-        run: ssh development 'docker rm -f $(docker ps -a -q) || true && docker pull agusdwimilniadi/profcourse:1.0.0 && docker run -d -p 3000:80 --name=profcourse agusdwimilniadi/profcourse:1.0.0'
+        run: ssh development 'docker rm -f $(docker ps -a -q) || true && docker pull agusdwimilniadi/profcourse:latest && docker run -d -p 3000:80 --name=profcourse agusdwimilniadi/profcourse:latest'
