--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
     "sweetalert": "^2.1.2",
     "uuid-validate": "^0.0.3",
     "web-vitals": "^2.1.2"
