--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -5,6 +5,7 @@ on:
       - 'development'
       - '13-CI/CD'
       - '14-LMS'
+      - '19-TambahMateri'
   # pull_request:
   #   branches:
   #     - development
