maaf rombak cicd dikit

--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -5,9 +5,9 @@ on:
       - 'development'
       - '13-CI/CD'
       - '14-LMS'
-  # pull_request:
-  #   branches:
-  #     - development
+  pull_request:
+    branches:
+      - development
   #     - main
 
 jobs:
