--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -3,8 +3,7 @@ on:
   push:
     branches:
       - 'development'
-      - '13-CI/CD'
-      - '14-LMS'
+      - '20-FixBug'
   pull_request:
     branches:
       - development
